fixing template error

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@ While exploring, the player will trigger a battle sequence when they encounter a
     let mountains_front = document.getElementById('mountains_front')
     let btn = document.getElementById('btn')
     let text = document.getElementById('text')
-    let  = document.querySelector('header')
+    let header = document.querySelector('header')
 
     window.addEventListener('scroll',function(){
         let value = window.scrollY;
