Add footer section

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,19 +22,83 @@
     <img src="{{ url_for('static', filename='/mountains_behind.png') }}" id="mountains_behind">
     <img src="{{ url_for('static', filename='/mountains_front.png') }}" id="mountains_front">
 </section>
-<div class="sec" id="sec">
-    <h2>Prallax Effects</h2>
-    <p>
-        Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series, Paper Mario: Sticker Star. The player controls a two-dimensional version of Mario using the Wii U GamePad, and follows Mario as he explores a paper-craft world designed to look like craft materials.[10] The main objective is to retrieve the missing six Big Paint Stars stolen by Bowser, all of which occupy a different portion of the world.[11] Players traverse through a world map containing stages; the goal of each is to reach the Mini Paint Star at the end.[10] Upon reaching a Mini Paint Star for the first time, the player unlocks access to new stages.[12] Some stages contain multiple Mini Paint Stars.[10]
 
-Mario along the coastline of a beach. Behind him is a smoothie stand and a show stage, and is populated by various other characters.
-Mario (center) strikes a colorless flower with his paint hammer. In the top left is a paint meter display, showing how much paint is available.
-In these stages, Mario can collect items and coins, talk to non-player characters (NPC), and complete puzzles and platforming challenges.[10] He can consult Huey, Mario's ally, for assistance. Mario is equipped with a paint hammer, which can fill in colorless spots found throughout the world.[13] Upon filling in the spots, Mario is awarded items such as coins.[13] The hammer uses Mario's supply of paint, which comes in red, blue, and yellow varieties, which can be obtained by striking objects with the hammer.[13] The type of area the player is filling in determines the color and amount of paint used. If the player collects "hammer scraps", they can increase the maximum amount of paint they can carry.[12] Another ability, called the "cutout", allows Mario to reach otherwise inaccessible areas in stages.[11] To use the ability, the player traces a dotted line on the GamePad's touchscreen, causing part of the environment to peel off, exposing secrets and new areas.[3][12]
-<br>
-While exploring, the player will trigger a battle sequence when they encounter an enemy.[13] Depending on how the player collided with the enemy, they will either deal or take damage immediately. The combat system in Color Splash is a turn-based battle system; the player's possible attacks are represented by cards the player can either collect from stages and defeated enemies, or purchase from shops with the in-game currency of coins.[14] Cards can be used to attack enemies; they can also be painted to increase their strength.[15] They range from basic jump and hammer attacks to "Thing" cards that resemble real-world objects, such as a fire extinguisher.[16] The type of card determines the amount and color of paint to use, as well as how Mario attacks the enemy.[13] The cards can also be used for defensive purposes, such as preventing some damage or healing Mario.[15] Players choose, paint and sort cards with the GamePad's touchscreen.[11] Enemy attacks will damage Mario, and the game is over once Mario loses all of his health. If the player defeats all the enemies in the encounter, the player returns to the stage and is rewarded with a random assortment of coins, cards, paint, and hammer scraps.[13]
-    </p>
-
+<footer>
+<div class="container" id="sec">
+    <div class="card">
+        <div class="imgBx"  data-text="Logs">
+            <img src="static/logs.png" alt="">
+        </div>
+        <div class="content">
+            <div>
+                <h3>Logs</h3>
+                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
+                <a href="#">Launch</a>
+            </div>
+        </div>
+    </div>
+     <div class="card">
+        <div class="imgBx" data-text="Artifact">
+            <img src="static/artifact.png" alt="" >
+        </div>
+        <div class="content">
+            <div>
+                <h3>Artifact</h3>
+                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
+                <a href="#">Launch</a>
+            </div>
+        </div>
+    </div>
+     <div class="card">
+        <div class="imgBx" data-text="Trained Model">
+            <img src="static/trained_model.png" alt="" >
+        </div>
+        <div class="content">
+            <div>
+                <h3>Trained Model</h3>
+                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
+                <a href="#">Launch</a>
+            </div>
+        </div>
+    </div>
+     <div class="card">
+        <div class="imgBx" data-text="Prediction">
+            <img src="static/predictor.png" alt="" >
+        </div>
+        <div class="content">
+            <div>
+                <h3>Prediction</h3>
+                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
+                <a href="#">Launch</a>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx" data-text="Train Estimator">
+            <img src="static/1.png" alt="" >
+        </div>
+        <div class="content">
+            <div>
+                <h3>Train Estimator</h3>
+                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
+                <a href="#">Launch</a>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx" data-text="Update Config">
+            <img src="static/update.png" alt="" >
+        </div>
+        <div class="content">
+            <div>
+                <h3>Update Config</h3>
+                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
+                <a href="#">Launch</a>
+            </div>
+        </div>
+    </div>
 </div>
+</footer>
 <script>
     let stars = document.getElementById('stars')
     let moon = document.getElementById('moon')
