--- a/static/index.css
+++ b/static/index.css
@@ -103,24 +103,89 @@ section img #mountains_front{
     font-size: 1.5rem;
     z-index: 9;
     transform: translateY(100px);
-
-    
-    
 }
-.sec{
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #222;
+    min-height: 100vh;
+}
+.container{
     position: relative;
-    padding: 100px;
-    background:#1c0522;
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 20px;
 }
-.sec h2{
-    font-size: 3.5em;
-    margin-bottom: 10px;
-    color:#fff;
+.container .card{
+    position: relative;
+    height: 250px;
+    background: #fff;
+    display: flex;
+    width: 45%;
+    margin: 30px 0;
 }
-.sec p{
-    font-size: 1em;
-    color:#fff;
-    
-    word-spacing: 150px;
-
+.container .card .imgBx{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: 0.5s ease-in-out;
+}
+.container .card:hover .imgBx{
+    width: 150px;
+    height: 150px;
+    left:-75px;
+    top: calc(50% - 75px);
+    transition:   0.5s ease-in-out;
+    background: #ff0057;
+}
+.container .card .imgBx:before{
+    content: attr(data-text);
+    position: absolute;
+    bottom: 0;
+    left:0;
+    width:100%;
+    text-align: center;
+    font-size: 6em;
+    color: rgba(255,255,255,0.05);
+    font-weight: 700;
+}
+.container .card .imgBx img{
+    max-width: 100px;
+    transition: 0.5s ease-in-out;
+}
+.container .card:hover .imgBx img{
+    max-width: 75px;
+}
+.container .card .content{
+    position: absolute;
+    right: 0;
+    width: calc(100% - 75px);
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container .card .content h3{
+    margin-bottom: 5px;
+    font-size: 24px;
+}
+.container .card .content a{
+    display: inline-block;
+    margin-top: 10px;
+    padding: 5px 10px;
+    background:#333;
+    text-decoration: none;
+    color: #fff;
 }
