--- a/templates/files.html
+++ b/templates/files.html
@@ -11,7 +11,12 @@
 <main class="mt-5 pt-3">
     <div class="container-fluid">
 
-    
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/artifact">Artifact</a></li>
+            </ol>
+        </nav>
 {% if "sharing" in result['parent_folder'] %}
 <a href="/artifact/{{result['parent_folder']}}"><i class="fa fa-arrow-left" aria-hidden="true"></i>Back</a>
 
