--- a/templates/log.html
+++ b/templates/log.html
@@ -11,6 +11,14 @@
 
 <main class="mt-5 pt-3">
     <div class="container-fluid">
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/logs">Log File</a></li>
+            </ol>
+        </nav>
+
         {{ context['log']|safe }}
     </div>
 </main>
