--- a/templates/experiment_history.html
+++ b/templates/experiment_history.html
@@ -3,14 +3,21 @@
 {% block head %}
 
 
-<title>Train Status</title>
+<title>Experiment History</title>
 {% endblock %}
 
 {% block content %}
 
 
+
 <main class="mt-5 pt-3">
     <div class="container-fluid">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/view_experiment_hist">Experiment History</a></li>
+            </ol>
+        </nav>
         {{ context['experiment']|safe }}
     </div>
 </main>
