--- a/templates/log_files.html
+++ b/templates/log_files.html
@@ -14,6 +14,12 @@
 <main class="mt-5 pt-3">
     <div class="container-fluid">
 
+         <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/logs">Logs</a></li>
+            </ol>
+        </nav>
     
 {% if "logs" in result['parent_folder'] %}
 <a href="/logs/{{result['parent_folder']}}"><i class="fa fa-arrow-left" aria-hidden="true"></i>Back</a>
