--- a/templates/predict.html
+++ b/templates/predict.html
@@ -11,141 +11,154 @@
 <main class="mt-5 pt-3">
     <div class="container-fluid">
 
-<div class="row">
-    <div class="col-md-6 col-sm-12 col-xs-6 col-lg-6">
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="/predict">Single Predictor</a></li>
+    </ol>
+</nav>
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/predict.css') }}" />
+<!--Card-->
+<div class="card shadow mb-5 bg-white rounded">
+
+	<!--Card-Body-->
+	<div class="card-body">
+
+		<!--Card-Title-->
+		<p class="card-title text-center shadow mb-5 rounded">Single Bike Count Predictor </p>
+		
+
         <form action="/predict" method="post">
-            <div class="mb-3">
-                <label class="form-label">Season</label>
-                <select class="form-control" name="season" placeholder="Select value of season"
-                    required>
-                    {% for item in list_four %}
-                    <option value="{{ item }}">{{ item }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Year</label>
-                <select class="form-control" name="year" placeholder="Select value of season"
-                    required>
+		<!--Second Row-->
+		<div class="row">
+
+			<div class="col-sm-6">
+				<select class="browser-default custom-select mb-4" id="select" name="season" required>
+        <option value="" disabled="" selected="">From Season</option>
+        {% for item in list_four %}
+        <option value="{{ item }}">{{ item }}</option>
+        {% endfor %}
+       
+    </select>
+			</div>
+
+			<div class="col-sm-6">
+				<select class="browser-default custom-select mb-4" name="year" id="select" >
+                    <option value="" disabled="" selected="">Select Year</option>
                     {% for item in list_two %}
                     <option value="{{ item }}">{{ item }}</option>
                     {% endfor %}
                 </select>
-            </div>
+			</div>
 
-            <div class="mb-3">
-                <label class="form-label">Month</label>
-                <select class="form-control" name="month" placeholder="Select value of Month"
-                    required>
+		</div>
+
+
+		<!--Third Row-->
+		<div class="row mt-4">
+
+			<div class="col-sm-6">
+				<select class="browser-default custom-select mb-4" name="month" id="select" required>
+                    <option value="" disabled="" selected="">Select Month</option>
                     {% for item in months %}
                     <option value="{{ item }}">{{ item }}</option>
                     {% endfor %}
                 </select>
-            </div>
+			</div>
 
-            <div class="mb-3">
-                <label class="form-label">Hours</label>
-                <select class="form-control" name="hour" placeholder="Select value of Month"
+				<div class="col-sm-6">
+					<select class="browser-default custom-select mb-4" name="hour" placeholder="Select value of Month"
                     required>
+                    <option value="" disabled="" selected="">Select Hours</option>
                     {% for item in hours %}
                     <option value="{{ item }}">{{ item }}</option>
                     {% endfor %}
                 </select>
-            </div>
+			</div>
 
-            <div class="mb-3">
-                <label class="form-label">Holiday</label>
-                <select class="form-control" name="holiday" placeholder="Select value of Holiday"
-                    required>
-                    {% for item in list_two %}
-                    <option value="{{ item }}">{{ item }}</option>
-                    {% endfor %}
-                </select>
-            </div>
+         
 
-            <div class="mb-3">
-                <label class="form-label">Weekday</label>
-                <select class="form-control" name="weekday" placeholder="Select value of Weekday"
-                    required>
-                    {% for item in weekdays %}
-                    <option value="{{ item }}">{{ item }}</option>
-                    {% endfor %}
-                </select>
-            </div>
+				</div>
 
-            <div class="mb-3">
-                <label class="form-label">Workingday</label>
-                <select class="form-control" name="workingday" placeholder="Select value of workingday"
-                    required>
-                    {% for item in list_two %}
-                    <option value="{{ item }}">{{ item }}</option>
-                    {% endfor %}
-                </select>
-            </div>
 
-            <div class="mb-3">
-                <label class="form-label">Weather</label>
-                <select class="form-control" name="weather" placeholder="Select value of Weather"
-                    required>
-                    {% for item in list_four %}
-                    <option value="{{ item }}">{{ item }}</option>
-                    {% endfor %}
-                </select>
-            </div>
+				<!--Fourth Row-->
+				<div class="row mt-4">
 
-            <div class="mb-3">
-                <label class="form-label">Temperature</label>
-               <input class="form-control" type="number" name = "temp" placeholder = "Temperature" required>
-            </div>
+					<div class="col-sm-6">
+						<select class="browser-default custom-select mb-4" id="select" name="holiday" required>
+                            <option value="" disabled="" selected="">Select value of Holiday</option>
+                            {% for item in list_two %}
+                            <option value="{{ item }}">{{ item }}</option>
+                            {% endfor %}
+                        </select>
+					</div>
 
-            <div class="mb-3">
-                <label class="form-label">humidity</label>
-               <input class="form-control" type="number" name = "humidity" placeholder = "Humidity" required>
-            </div>
+					<div class="col-sm-6">
+						<select class="browser-default custom-select mb-4" id="select" name="weekday" required>
+                            <option value="" disabled="" selected="">Select value of Weekday</option>
+                            {% for item in weekdays%}
+                            <option value="{{ item }}">{{ item }}</option>
+                            {% endfor %}
+                        </select>
+					</div>
 
-            <div class="mb-3">
-                <label class="form-label">Windspeed</label>
-               <input class="form-control" type="number" name = "windspeed" placeholder = "Windspeed" required>
-            </div>
+				</div>
 
-            <div class="mb-3">
-                <input class="btn btn-primary" type="submit" value="Predict Median House Value" required />
-            </div>
-        </form>
-    </div>
-    </div>
-  
-    <div class="col-md-6 col-sm-12 col-xs-6 col-lg-6">
-        <div class="card">
-            <div class="card-header">
-                California housing price
-              </div>
-              <div class="card-body">
+                <!--Fifth Row-->
+				<div class="row mt-4">
+
+					<div class="col-sm-6">
+						<select class="browser-default custom-select mb-4" id="select" name="workingday" required>
+                            <option value="" disabled="" selected="">Select value of workingday</option>
+                            {% for item in list_two %}
+                            <option value="{{ item }}">{{ item }}</option>
+                            {% endfor %}
+                        </select>
+					</div>
+
+					<div class="col-sm-6">
+                        <select class="browser-default custom-select mb-4"  name="weather" id="select" required>
+                            <option value="" disabled="" selected="">Select value of Weather</option>
+                            {% for item in list_four %}
+                            <option value="{{ item }}">{{ item }}</option>
+                            {% endfor %}
+                        </select>
+					</div>
+
+				</div>
+
+
+				<!--Sixth Row-->
+				<div class="row">
+
+					<div class="col-sm-4">
+						<input class="form-control" type="number" name = "temp" placeholder = "Temperature" required>
+					</div>
+
+					<div class="col-sm-4">
+						<input class="form-control" type="number" name = "humidity" placeholder = "Humidity" required>
+					</div>
+
+					<div class="col-sm-4">
+                        <input class="form-control" type="number" name = "windspeed" placeholder = "Windspeed" required>
+					</div>
+
+				</div>
+
+                
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <input class="btn btn-primary mt-5" type="submit" value="Predict Median House Value" required />
+                  </div>
                 {% if context['housing_data'] is not none %}
-        <table class="table table-striped">
-            <caption>Califoria Housing Prediction </caption>
-            <tr>
-                <th>Input Feature</th>
-                <th>Feature Value</th>
-            </tr>
-            {% for column,value in context['housing_data'].items() %}
-            <tr>
-                <td>{{column}}</td>
-                <td>{{value[0]}}</td>
-            </tr>
-            {% endfor %}
-            <tr>
-                <td>median_house_value </td>
-                <td>
-                    {{ context['median_house_value'] }}
-                </td>
-            </tr>
-        </table>
-        {% endif %}
+                <div class="d-grid gap-2 col-6 mx-auto mt-3">
+                    <button class="btn btn-primary" type="button"><span>One Day Rented Bike Count = </span>{{ context['median_house_value'] }}</button>
+                  </div>
+                  {% endif %}
+			</div>
+        </form>
+		</div>
 
-              </div>
-            </div>
-            </div>
     </div>
     </main>
  {% endblock %}
