configuring & implementing boto3

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -334,7 +334,7 @@
                               <i class="fa fa-th"></i>
                           </div>
                           <div class="feature-content">
-                            <a href="/train" ><h5>Single Predictor</h5></a>
+                            <a href="/predict" ><h5>Single Predictor</h5></a>
 
                               <p>Form will be displayed for single prediction. Submit the form to get estimated count for Rental Bike Count. </p>
                           </div>
