add batch prediction skeleton

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -142,7 +142,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="nav-link px-3">
+                    <a href="/batch_predict" class="nav-link px-3">
                       <span class="me-2"
                         ><i class="bi bi-speedometer2"></i
                       ></span>
@@ -348,7 +348,7 @@
                               <i class="fa fa-th"></i>
                           </div>
                           <div class="feature-content">
-                              <h5>Batch Predictor</h5>
+                              <a href="/batch_predict"><h5>Batch Predictor</h5></a>
                               <p>Form will be displayed for batch prediction. Submit the form to get estimated count for Rental Bike Count. </p>
                           </div>
                       </div>
