modify landing page

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -77,11 +77,9 @@
                 <i class="bi bi-person-fill"></i>
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
+                <li><a class="dropdown-item" href="/index">Go Back Home</a></li>
+              
+              
               </ul>
             </li>
           </ul>
@@ -277,7 +275,7 @@
                   <div class="col-sm-6 col-lg-4">
                       <div class="feature-box-1">
                           <div class="icon">
-                              <i class="fa fa-desktop"></i>
+                              <i class="fa fa-file"></i>
                           </div>
                           <div class="feature-content">
                               
@@ -291,7 +289,7 @@
                   <div class="col-sm-6 col-lg-4">
                       <div class="feature-box-1">
                           <div class="icon">
-                              <i class="fa fa-user"></i>
+                              <i class="fa fa-clipboard"></i>
                           </div>
                           <div class="feature-content">
                             <a href="/artifact" ><h5>Artifact Files </h5></a>
@@ -304,7 +302,8 @@
                     <div class="col-sm-6 col-lg-4">
                       <div class="feature-box-1">
                           <div class="icon">
-                              <i class="fa fa-user"></i>
+                          
+                              <i class="fa fa-rocket"></i>
                           </div>
                           <div class="feature-content">
                              <a href="/saved_models" ><h5>Trained Models</h5></a>
@@ -317,7 +316,7 @@
                   <div class="col-sm-6 col-lg-4">
                       <div class="feature-box-1">
                           <div class="icon">
-                              <i class="fa fa-comment"></i>
+                              <i class="fa fa-repeat"></i>
                           </div>
                           <div class="feature-content">
                               <a href="/train" ><h5>Initiate model training</h5></a>
@@ -331,7 +330,7 @@
                   <div class="col-sm-6 col-lg-4">
                       <div class="feature-box-1">
                           <div class="icon">
-                              <i class="fa fa-th"></i>
+                              <i class="fa fa-bar-chart"></i>
                           </div>
                           <div class="feature-content">
                             <a href="/predict" ><h5>Single Predictor</h5></a>
@@ -358,7 +357,16 @@
           </div>
       </section>
 
-
+      <footer class="footer mt-auto py-3 bg-dark">
+        <div class="container">
+          <p class="text-muted">https://bike-share-ml.herokuapp.com/ &copy; 2022</p>
+          <div class="col item social"><a href="https://www.facebook.com/ineuronai/">
+            <i class="fa fa-facebook"></i></a><a href="https://twitter.com/hashtag/ineuron"><i class="fa fa-twitter"></i>
+            </a><a href="https://www.youtube.com/c/iNeuroniNtelligence"><i class="fa fa-youtube"></i></a>
+            <a href="https://www.instagram.com/ineuron.ai/"><i class="fa fa-instagram"></i></a>
+            <a href="https://ineuron.ai/"><i class="fa fa-google"></i></a></div>
+        </div>
+      </footer>
       </div>
     </main>
     
