--- a/static/css/predict.css
+++ b/static/css/predict.css
@@ -12,7 +12,7 @@
   .card-title{
     margin:auto;
     padding:15px;
-    background-color: #2f7fad;
+    background-color: #0d6efd;
     color: white;
     width:80%;
   }
@@ -102,3 +102,66 @@
       text-align: center;
     }
   }
+  .modal-header{
+    background: #ef715f;
+color: #fff;
+}
+h5{
+    padding-top: 10px;
+padding-bottom: 10px;
+font-size: 33px;
+display: block;
+margin: 0 auto;
+}
+.modal-header .close{
+height: 50px;
+width: 50px;
+/* background: #fff; */
+border-radius: 51%;
+font-size: 30px;
+padding: 0;
+color: #fff;
+position: absolute;
+left: auto;
+right: 8px;
+top: 5px;
+}
+.btn-custom{
+      background: #ef715f;
+border-radius: 5px;
+color: #fff;
+padding: 9px 42px;
+margin: 20px auto;
+display: block;
+font-size: 20px;
+font-weight: 700;
+}
+.btn-custom:hover{
+color: #fff;
+}
+h3{
+text-align: center;
+font-size: 35px;
+padding-top: 20px;
+letter-spacing: 2px;
+line-height: 40px;
+}
+p{
+text-align: center;
+font-size: 20px;
+padding-top: 20px;
+margin: 0;
+}
+@media(max-width: 575px){
+.modal-dialog{
+margin: 1.5rem;
+}
+h5{
+padding-top: 20px;
+padding-bottom: 20px;
+font-size: 50px;
+}
+h3{
+font-size: 45px;
+}
+}
