--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Forest Fire Prediction</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <header>
     <a href="#" class="logo">Bike Count Predictor</a>
     <ul>
-        <li><a href="#">About</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
 </header>
@@ -22,6 +23,8 @@
     <img src="{{ url_for('static', filename='/mountains_behind.png') }}" id="mountains_behind">
     <img src="{{ url_for('static', filename='/mountains_front.png') }}" id="mountains_front">
 </section>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
 
 <footer>
 <div class="container" id="sec">
@@ -32,8 +35,8 @@
         <div class="content">
             <div>
                 <h3>Logs</h3>
-                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
-                <a href="#">Launch</a>
+                <p>All model training log file can be downloaded.</p>
+                <a href="/">Launch</a>
             </div>
         </div>
     </div>
@@ -44,8 +47,8 @@
         <div class="content">
             <div>
                 <h3>Artifact</h3>
-                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
-                <a href="#">Launch</a>
+                <p>All model artifacts file can be downloaded.</p>
+                <a href="/">Launch</a>
             </div>
         </div>
     </div>
@@ -56,8 +59,8 @@
         <div class="content">
             <div>
                 <h3>Trained Model</h3>
-                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
-                <a href="#">Launch</a>
+                <p>All model artifacts file can be downloaded.</p>
+                <a href="/">Launch</a>
             </div>
         </div>
     </div>
@@ -68,8 +71,8 @@
         <div class="content">
             <div>
                 <h3>Prediction</h3>
-                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
-                <a href="#">Launch</a>
+                <p>Form will be displayed for single prediction. Submit the form to get estimated count for Rental Bike Count.</p>
+                <a href="/">Launch</a>
             </div>
         </div>
     </div>
@@ -80,25 +83,209 @@
         <div class="content">
             <div>
                 <h3>Train Estimator</h3>
-                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
-                <a href="#">Launch</a>
+                <p>Model training will be done. Files such as log, artifact and models can be viewed and downloaded using appropriate link.</p>
+                <a href="/">Launch</a>
             </div>
         </div>
     </div>
     <div class="card">
-        <div class="imgBx" data-text="Update Config">
+        <div class="imgBx" data-text="Batch Predictor">
             <img src="static/update.png" alt="" >
         </div>
         <div class="content">
             <div>
                 <h3>Update Config</h3>
-                <p>Paper Mario: Color Splash has elements of both action-adventure and role-playing genres. This follows the template established by the previous entry in the series</p>
-                <a href="#">Launch</a>
+                <p>Form will be displayed for batch prediction. Submit the form to get estimated count for Rental Bike Count.</p>
+                <a href="/">Launch</a>
             </div>
         </div>
     </div>
 </div>
 </footer>
+<section class="timeline_area section_padding_130" style="background: #ddd;" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <!-- Timeline Area-->
+                <div class="apland-timeline-area">
+                    
+                    <!-- Single Timeline Content-->
+                    <div class="single-timeline-area">
+                        <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                            <p>DATA INGESTION </p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-cloud-download" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Download Compressed Dataset </h6>
+                                       
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-file-zip-o" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>UnCompressed Dataset </h6>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.7s" style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-industry" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Stratified Split Dataset</h6>
+                                       
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Single Timeline Content-->
+                    <div class="single-timeline-area">
+                        <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                            <p>DATA VALIDATION</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-object-ungroup" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Validating Data Drift</h6>  
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-map-signs" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Validating Data Types</h6>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-line-chart" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Performed EDA</h6>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Single Timeline Content-->
+                    <div class="single-timeline-area">
+                        <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                            <p>DATA TRANSFORMATION</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Performed Feature Engineering</h6>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-sort-numeric-asc" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Numerical Columns</h6>
+                                        <p>Applied Standard Scaler & Mean Imputation</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.7s" style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-sort-alpha-asc" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Categorical Columns</h6>
+                                        <p>Applied Standard Scaler, One Hot Encoding & Mode Imputation</p>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Single Timeline Content-->
+                    <div class="single-timeline-area">
+                        <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                            <p>MODEL TRAINING</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-tty" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Applied Grid Search CV</h6>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-arrows-alt" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Best Model Metrics</h6>
+                                        <p>Calculated R2 score, RMSE & MSE</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                     <!-- Single Timeline Content-->
+                     <div class="single-timeline-area">
+                        <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                            <p>MODEL EVALUATION</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-area-chart" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Compared Model</h6>
+                                        <p>Best Trained model is compared with production model</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                     <!-- Single Timeline Content-->
+                     <div class="single-timeline-area">
+                        <div class="timeline-date wow fadeInLeft" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                            <p>MODEL PUSHER</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-cloud-upload" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Save model into S3 Bucket</h6>
+                                        <p>Used boto3 to upload & download best model</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+                                    <div class="timeline-icon"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                    <div class="timeline-text">
+                                        <h6>Push best model into production</h6>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <script>
     let stars = document.getElementById('stars')
     let moon = document.getElementById('moon')
