fixing side bar error

--- a/templates/experiment_history.html
+++ b/templates/experiment_history.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
                 <li class="breadcrumb-item"><a href="/view_experiment_hist">Experiment History</a></li>
             </ol>
         </nav>
