--- a/templates/files.html
+++ b/templates/files.html
@@ -13,7 +13,7 @@
 
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
                 <li class="breadcrumb-item"><a href="/artifact">Artifact</a></li>
             </ol>
         </nav>
