--- a/templates/log.html
+++ b/templates/log.html
@@ -14,10 +14,11 @@
 
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
                 <li class="breadcrumb-item"><a href="/logs">Log File</a></li>
             </ol>
         </nav>
+        <hr>
 
         {{ context['log']|safe }}
     </div>
