--- a/templates/train.html
+++ b/templates/train.html
@@ -8,7 +8,7 @@
 
 <main class="mt-5 pt-3">
   <div class="container-fluid">
-Go to <a class="btn btn-primary" href="/">Home</a>
+Go to <a class="btn btn-primary" href="/dashboard">Home</a>
 <div class="row">
     <div class="alert alert-primary" role="alert">
         {{ context['message']}}
