--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,14 +8,11 @@
     <link
       rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"/>
     
-    <link rel="stylesheet" href="{{ url_for('static', filename='/css/dataTables.bootstrap5.min.css') }}" />
     <script src="https://kit.fontawesome.com/778c911bcf.js" crossorigin="anonymous"></script>
      <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}" />
     
 
 
-    
-  
     <title>Bike Count Predictor</title>
     {% block head %}{% endblock %}
 
@@ -37,7 +34,7 @@
         </button>
         <a
           class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
-          href="/"
+          href="/dashboard"
           >Bike Count Predictor</a
         >
         <button
@@ -102,7 +99,7 @@
               </div>
             </li>
             <li>
-              <a href="/" class="nav-link px-3">
+              <a href="/dashboard" class="nav-link px-3">
                 <span class="me-2"><i class="bi bi-book-fill"></i></span>
                 <span>Dashboard</span>
               </a>
@@ -379,11 +376,7 @@
     {% endif %}
    
     <script src="{{ url_for('static', filename='/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='/js/dataTables.bootstrap5.min.js') }}"></script>
     <script src="{{ url_for('static', filename='/js/jquery-3.5.1.js') }}"></script>
-    <script src="{{ url_for('static', filename='/js/jquery.dataTables.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='/js/dataTables.bootstrap5.min.js') }}"></script>
     <script src="{{ url_for('static', filename='/js/script.js') }}"></script>
   </body>
 </html>
