--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Forest Fire Prediction</title>
+    <title>Bike Count Predictor</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -36,7 +36,7 @@
             <div>
                 <h3>Logs</h3>
                 <p>All model training log file can be downloaded.</p>
-                <a href="/">Launch</a>
+                <a href="/dashboard">Launch</a>
             </div>
         </div>
     </div>
@@ -48,7 +48,7 @@
             <div>
                 <h3>Artifact</h3>
                 <p>All model artifacts file can be downloaded.</p>
-                <a href="/">Launch</a>
+                <a href="/dashboard">Launch</a>
             </div>
         </div>
     </div>
@@ -60,7 +60,7 @@
             <div>
                 <h3>Trained Model</h3>
                 <p>All model artifacts file can be downloaded.</p>
-                <a href="/">Launch</a>
+                <a href="/dashboard">Launch</a>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
             <div>
                 <h3>Prediction</h3>
                 <p>Form will be displayed for single prediction. Submit the form to get estimated count for Rental Bike Count.</p>
-                <a href="/">Launch</a>
+                <a href="/dashboard">Launch</a>
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
             <div>
                 <h3>Train Estimator</h3>
                 <p>Model training will be done. Files such as log, artifact and models can be viewed and downloaded using appropriate link.</p>
-                <a href="/">Launch</a>
+                <a href="/dashboard">Launch</a>
             </div>
         </div>
     </div>
@@ -96,7 +96,7 @@
             <div>
                 <h3>Update Config</h3>
                 <p>Form will be displayed for batch prediction. Submit the form to get estimated count for Rental Bike Count.</p>
-                <a href="/">Launch</a>
+                <a href="/dashboard">Launch</a>
             </div>
         </div>
     </div>
