--- a/templates/predict.html
+++ b/templates/predict.html
@@ -13,7 +13,7 @@
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
         <li class="breadcrumb-item"><a href="/predict">Single Predictor</a></li>
     </ol>
 </nav>
