--- a/templates/saved_models_files.html
+++ b/templates/saved_models_files.html
@@ -14,7 +14,7 @@
 
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
                 <li class="breadcrumb-item"><a href="/saved_models">Trained Models</a></li>
             </ol>
         </nav>
