--- a/templates/update_model.html
+++ b/templates/update_model.html
@@ -12,7 +12,7 @@
 
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
                 <li class="breadcrumb-item"><a href="/update_model_config">Model Config</a></li>
             </ol>
         </nav>
