add train initiating template

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,9 +74,7 @@
                 <i class="bi bi-person-fill"></i>
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="/index">Go Back Home</a></li>
-              
-              
+                <li><a class="dropdown-item" href="/">Go Back Home</a></li>
               </ul>
             </li>
           </ul>
@@ -337,32 +335,41 @@
                       </div>
                   </div>
                   <!-- / -->
-                    <!-- feaure box -->
-                    <div class="col-sm-6 col-lg-4">
-                      <div class="feature-box-1">
-                          <div class="icon">
-                              <i class="fa fa-th"></i>
-                          </div>
-                          <div class="feature-content">
-                              <a href="/batch_predict"><h5>Batch Predictor</h5></a>
-                              <p>Form will be displayed for batch prediction. Submit the form to get estimated count for Rental Bike Count. </p>
-                          </div>
-                      </div>
-                  </div>
-                  <!-- / -->
+                   <!-- feaure box -->
+                   <div class="col-sm-6 col-lg-4">
+                    <div class="feature-box-1">
+                        <div class="icon">
+                            <i class="fa fa-th"></i>
+                        </div>
+                        <div class="feature-content">
+                          <a href="/predict" ><h5>Batch Predictor</h5></a>
+
+                            <p>Form will be displayed for batch prediction. Submit the form to get estimated count for Rental Bike Count. </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- / -->
+                   
               </div>
           </div>
       </section>
 
       <footer class="footer mt-auto py-3 bg-dark">
         <div class="container">
-          <p class="text-muted">https://bike-share-ml.herokuapp.com/ &copy; 2022</p>
-          <div class="col item social"><a href="https://www.facebook.com/ineuronai/">
-            <i class="fa fa-facebook"></i></a><a href="https://twitter.com/hashtag/ineuron"><i class="fa fa-twitter"></i>
-            </a><a href="https://www.youtube.com/c/iNeuroniNtelligence"><i class="fa fa-youtube"></i></a>
-            <a href="https://www.instagram.com/ineuron.ai/"><i class="fa fa-instagram"></i></a>
-            <a href="https://ineuron.ai/"><i class="fa fa-google"></i></a></div>
-        </div>
+          <div class="row">
+            <div class="col-sm-6 col-lg-6">
+              <p class="text-muted">https://bike-share-ml.herokuapp.com/ &copy; 2022</p>
+            </div>
+            <div class="col-sm-6 col-lg-6">
+              <div class="col item social"><a href="https://www.facebook.com/ineuronai/">
+                <i class="fa fa-facebook"></i></a><a href="https://twitter.com/hashtag/ineuron"><i class="fa fa-twitter"></i>
+                </a><a href="https://www.youtube.com/c/iNeuroniNtelligence"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.instagram.com/ineuron.ai/"><i class="fa fa-instagram"></i></a>
+                <a href="https://ineuron.ai/"><i class="fa fa-google"></i></a></div>                  
+            </div>
+         
+         
+        </div>  
       </footer>
       </div>
     </main>
