add logo on landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <a href="#" class="logo">Bike Count Predictor</a>
+    <a href="/" class="logo"><img src="{{ url_for('static', filename='/Rental Bikes-logos_transparent.png') }}" style="width: 100px;height:100px;">Bike Count Predictor</a>
     <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#">Contact</a></li>
